fix spacing

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ i {
 }
 
 .project-card {
-  margin: 12.5px 10px;
+  margin: 1rem 1rem;
   width: 350px;
   height: 300px;
 }
@@ -141,10 +141,6 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-  /* body {
-    overflow-x: hidden;
-  } */
-
   .site {
     overflow-x: hidden;
   }
